--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@svgr/core": "^8.1.0",
     "@tanstack/react-query": "^5.61.5",
-    "@types/serviceworker": "^0.0.107",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -53,7 +52,6 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
-    "idb": "^8.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
@@ -72,8 +70,6 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
-    "vite-plugin-pwa": "^0.21.1",
-    "workbox-window": "^7.3.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
@@ -83,21 +79,21 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^20.17.9",
+    "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.27.1",
     "esbuild": "^0.24.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.19.1",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9",
     "vite-plugin-checker": "^0.8.0"
   },
   "optionalDependencies": {
